# habitat-language-agent-demo

./: README.md  pyproject.toml
data/: scenarios.json
scripts/: run_demo.py
src/habitat_language_agent_demo/: __init__.py  env.py  executor.py  planner.py  scenarios.py
tests/: test_demo.py
